crates/uitest/fixtures/ty/kind_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/kind_mismatch.fe
---
error[2-0001]: `baz` conflicts with other definitions
   ┌─ kind_mismatch.fe:9:5
   │
 9 │     baz: Foo<i32, u32, u256>
   │     ^^^ `baz` is defined here
10 │     baz: Foo<i32, Foo<i32, u32, u256>>
   │     --- `baz` is redefined here

error[3-0001]: kind mismatch between two types
  ┌─ kind_mismatch.fe:7:19
  │
7 │     foo: Foo<i32, Foo>
  │                   ^^^ expected `*` kind, but found `(* -> (* -> *))` kind

error[3-0001]: kind mismatch between two types
  ┌─ kind_mismatch.fe:8:14
  │
8 │     bar: Foo<Foo, i32>
  │              ^^^ expected `*` kind, but found `(* -> (* -> *))` kind

error[3-0001]: kind mismatch between two types
  ┌─ kind_mismatch.fe:9:24
  │
9 │     baz: Foo<i32, u32, u256>
  │                        ^^^^ too many generic arguments

error[3-0001]: kind mismatch between two types
   ┌─ kind_mismatch.fe:10:33
   │
10 │     baz: Foo<i32, Foo<i32, u32, u256>>
   │                                 ^^^^ too many generic arguments


